--- a/static/css/measurement.css
+++ b/static/css/measurement.css
@@ -1,5 +1,5 @@
 .customer_photo{
-    box-shadow:  0px 7px 20px 0px rgba(0,0,0,0.5);
+    /* box-shadow:  0px 7px 20px 0px rgba(0,0,0,0.5); */
     border-radius: 50%;
     margin-left: 3%;
     width: 200px;
@@ -13,8 +13,4 @@
     border: none;
     border-bottom:1px solid grey ;
     outline: 0;
-}
-.whiteboard{
-   background-color: black;
-
 }
