--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -188,3 +188,10 @@
         font-family: 'Roboto', sans-serif;
     }
     
+    /* all */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+    /* all end  */
