--- a/templates/account.html
+++ b/templates/account.html
@@ -75,16 +75,14 @@
                                 <div class="d-flex flex-column">
                                     <form method="post" action="next_payment">
                                         {% csrf_token %}
-                                    <div class="d-flex flex-row">
-                                        <label for="duePayment" class="fw-bold">Payment</label>
-                                        <input type="number" name="payment" id="advance" class="borderNone" min="0"
-                                               value="0">
-                                        <input type="hidden" name="invoice" class="borderNone" min="0"
-                                               value={{i.id}}>
-                                    </div>
-                                    <div class="d-flex flex-row">
-                                        <button class="btn btn-primary mt-3">Submit</button>
-                                    </div>
+                                        <div class="d-flex flex-row">
+                                            <label for="duePayment" class="fw-bold">Payment</label>
+                                            <input type="number" name="payment" id="advance" class="borderNone" min="0"
+                                                value="0">
+                                            <input type="hidden" name="invoice" class="borderNone" min="0"
+                                                value={{i.id}}>
+                                            <button class="btn btn-primary btn-sm mt-3">Submit</button>
+                                        </div>
                                     </form>
                                 </div>
                             </div>
