--- a/templates/navside.html
+++ b/templates/navside.html
@@ -174,28 +174,18 @@
         <!-- content -->
         <div class="content">
             <header class="navigationBar">
-                <div class="col-10">
+                <div class="col-9">
                     <button id="sidebarToggle" class="btn sidebarToggle">
                         <i class="fa fa-bars"></i>
                     </button>
                 </div>
-                <div class="col-2">
-                    <ul class="nav nav-pill">
-                        <!-- <li class="nav-item">
-                            <a class="nav-link link-dark" href="/">
-                                <i class="fa fa-comments"></i></a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link link-dark">
-                                <i class="fa fa-bell"></i></a>
-                            </a>
-                        </li> -->
-                        <li class="nav-item">
-                            <a href="logout" class="nav-link link-dark">
-                                <button class="btn btn-outline-secondary" style="color: black;" >Logout  <i class="fa fa4 fa-sign-out"></i></button>
-                            </a>
-                        </li>
-                    </ul>
+                <div class="col-3">
+                    <div class="btn-group btn-group-sm" role="group">
+                        <button class="btn btn-borderless" disabled><i class="fa fa-user"></i>   {{name}}</button>
+                        <a href="logout">
+                            <button class="btn btn-outline-danger btn-sm " >Logout  <i class="fa fa4 fa-sign-out"></i></button>
+                        </a>
+                      </div>
                 </div>
             </header>
             {% block content%}
