--- a/templates/signup.html
+++ b/templates/signup.html
@@ -48,7 +48,7 @@
                             <h1 class="d-flex justify-content-center mb-2 headSign">Sign up your Account</h1>
                             <h4 class="d-flex justify-content-center">Organization Detail</h4>
                             <div class="d-flex flex-column"><input type="text" name="c_name" placeholder="Organization's Name" class="form-control" required></div>
-                            <div class="d-flex flex-column"><input type="text" name="c_number" placeholder=" Contact no." maxlength="10" class="form-control" oninput="this.value = 
+                            <div class="d-flex flex-column"><input type="text" name="c_number" placeholder=" Contact no." minlength= "10" maxlength="10" class="form-control" oninput="this.value = 
                                 !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null" required></div>
                             <div class="d-flex flex-column"><input type="text" name="c_address" placeholder="Address" class="form-control" onkeydown="return /[a-z]/i.test(event.key)"  required></div>
                             <div class="d-flex flex-column">
@@ -59,9 +59,9 @@
                             <h4 class="d-flex justify-content-center mt-2">Proprietor Detail</h4>
                             <div class="d-flex flex-column"><input type="text" name="name" placeholder=" Name" class="form-control" required></div>
                             <div class="d-flex flex-column"><input type="text" name="address" placeholder="Address" class="form-control" onkeydown="return /[a-z]/i.test(event.key)"  required></div>
-                            <div class="d-flex flex-column"><input type="text" name="number" placeholder="Phone number" maxlength="10" class="form-control" oninput="this.value = 
+                            <div class="d-flex flex-column"><input type="text" name="number" placeholder="Phone number" minlength= "10" maxlength="10" class="form-control" oninput="this.value = 
                                 !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null" required></div>
-                            <div class="d-flex flex-column"><input type="email" name="email" placeholder="Email address " class="form-control" required></div>
+                            <div class="d-flex flex-column"><input type="email" name="email" placeholder="Email address " pattern="/^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/" class="form-control" required></div>
                             <div class="d-flex flex-column"><input type="password" name="password" placeholder="Password" class="form-control" id="pwd"required></div>
                             <div class="d-flex flex-column">
                                 <label class="form-control img_signup" for="file-input2">Insert Photo</label>
