--- a/templates/Measurement.html
+++ b/templates/Measurement.html
@@ -8,6 +8,10 @@
     }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css"/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 {% if not reg%}
 <div class="form-box ">
     <form action="customer_store" method="POST" enctype="multipart/form-data" class="needs-validation" novalidate>
@@ -17,7 +21,7 @@
                 <div class="row">
                     <div class="col-4 mb-3">
                         <label for="name">Name</label>
-                        <input type="text" class="form-control" name="name" id="name" placeholder="Customer name"
+                        <input type="text" class="form-control" name="name" pattern="[a-zA-Z]" id="name" placeholder="Customer name"
                                value="" required>
                         <div class="valid-feedback">
                             Looks good!
@@ -79,7 +83,7 @@
                     </div>
                     <div class="col-4 mb-3">
                         <label for="Deadline">Deadline</label>
-                        <input type="date" class="form-control" min="0" name="deadline" id="deadlineDate" required>
+                        <input type="date" class="form-control" name="deadline" id="deadlineDate" required>
                         <div class="invalid-feedback">
                             Please provide a valid date.
                         </div>
@@ -212,6 +216,7 @@
     {% endif %}
 </div>
 <!-- Form  -->
+
 <script>
         // Example starter JavaScript for disabling form submissions if there are invalid fields
         (function() {
@@ -261,8 +266,5 @@
         $('#deadlineDate').attr('min', maxDate);
     });
 </script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 {%endblock%}
