--- a/templates/employeelanding.html
+++ b/templates/employeelanding.html
@@ -27,7 +27,7 @@
                                 <th class="th">Email</th>
                                 <th class="th">Number</th>
                                 <th class="th">Address</th>
-                                <!-- <th class="th" colspan="2">Actions</th> -->
+                                <th class="th">Actions</th>
                                 <!-- <style>
                                     .th{
                                         text-align: center;
@@ -42,14 +42,29 @@
                                     <td><form action="empOrder" method="POST">
                                         {%csrf_token%}
                                         <input type="hidden" name="id" value={{e.id}}>
+                                        {% if forloop.first %}
+                                        <label class="text-primary" style="font-size:.875rem;">{{e.name}}  (Admin)</label>
+                                        {%else%}
                                         <button class=" btn btn-borderless btn-sm text-primary" >{{e.name}}</button>
+                                        {%endif%}
                                         </form>
                                     </td>
+                               
                                 <td><label for="total" name="total">{{e.email}}</label></td>
                                 <td><label for="advance" name="advance">{{e.number}}</label></td>
                                 <td><label for="remaning" name="remaining">{{e.address}}</label></td>
-                                <!-- <td class="th"><button class="btn btn-dark">Change</button>
-                                <button class="btn btn-dark">Delete</button></td> -->
+                                <!-- <td class="th"><button class="btn btn-dark">Change</button> -->
+                                <form action="empDelete" method="POST">
+                                    {%csrf_token%}
+                                    <input type="hidden" name="id" value={{e.id}}> 
+                                    {% if forloop.first %}
+                                    <td><button class="btn btn-danger btn-sm" disabled>Delete</button></td>
+                                    {% else %}
+                                    <td><button class="btn btn-danger btn-sm">Delete</button></td>
+                                    {% endif %}
+                                   
+
+                                </form>
                               </tr>
                         {% endfor %}
                         </tbody>
@@ -64,24 +79,25 @@
         <section class="col-8">
             <div class="d-flex flex-row justify-content-center"><h3>Register Employee</h3></div>
             <div class="form-row">
-                <input type="text" placeholder=" Name" name="name" class="form-control rounded-pill my-3 p-2">
+                <input type="text" placeholder=" Name" name="name" class="form-control rounded-pill my-3 p-2" required>
             </div>
             
             <div class="form-row">
-                <input type="email" name="email" pattern="/^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/" placeholder="Email address " class="form-control rounded-pill my-3 p-2">
+                <input type="email" name="email" pattern="/^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/" placeholder="Email address " class="form-control rounded-pill my-3 p-2" required>
             </div>
             <div class="form-row">
-                <input type="text" name="number" placeholder="Phone number"  pattern="[0-9]+" maxlength="10" minlength="10" class="form-control rounded-pill my-3 p-2">
+                <input type="text" name="number" placeholder="Phone number (10 digits)"  pattern="\d{10}" minlength="10" maxlength="10"  class="form-control rounded-pill my-3 p-2" oninput="this.value = 
+                !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null" required>
             </div>
             <div class="form-row">
-                <input type="text" name="address" placeholder="Address" class="form-control rounded-pill my-3 p-2">
+                <input type="text" name="address" placeholder="Address" class="form-control rounded-pill my-3 p-2" onkeydown="return /[a-z]/i.test(event.key)" required>
             </div>
             <div class="form-row">
-                <input type="password" name="password" placeholder="Password" class="form-control rounded-pill my-3 p-2">
+                <input type="password" name="password" placeholder="Password" class="form-control rounded-pill my-3 p-2" required>
             </div>
             <div class="form-row form-control rounded-pill my-1 p-1">
                 <label for="Insert_img"> <h6 style="color: grey;padding-left: 5px;">Insert photo:</h6></label>
-                <input type="file" name="image" >
+                <input type="file" name="image" required>
             </div>
             <div class="d-flex flex-row justify-content-center" ><button class="btn btn-success mt-2" style="padding-right:40%;padding-left:40%;">Register</button></div>
         </section>
