--- a/templates/Measurement.html
+++ b/templates/Measurement.html
@@ -21,7 +21,7 @@
                 <div class="row">
                     <div class="col-4 mb-3">
                         <label for="name">Name</label>
-                        <input type="text" class="form-control" name="name" pattern="[a-zA-Z]" id="name" placeholder="Customer name"
+                        <input type="text" class="form-control" name="name"  id="name" placeholder="Customer name"
                                value="" required>
                         <div class="valid-feedback">
                             Looks good!
